hphp/hack/test/typecheck/trait_reuse/trait_reuse_grandparent.php.exp
File "trait_reuse_grandparent.php", line 15, characters 7-17:
Traits with final methods cannot be reused, and `ReusedTrait` is already used by `One`. (Typing[4186])
File "trait_reuse_grandparent.php", line 7, characters 7-9:
`One` is defined here
File "trait_reuse_grandparent.php", line 8, characters 7-17:
`One` uses `ReusedTrait`
File "trait_reuse_grandparent.php", line 4, characters 25-27:
`ReusedTrait` has a final method `foo`
